# SphinxDoc

./: .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: pull-request-links.yaml
flaskr/: db.py
sphinx_docs/source/: conf.py  index.rst
