[project]
name = "sphinx_docs"
version = "0.1.0.dev"
description = "Just for test Sphinx Docs."
maintainers = [{name = "Test", email = "contact@test.com"}]
classifiers = [
    "Programming Language :: Python"
]
requires-python = "==3.10"
dependencies = [
    "flask",
    "sphinx",
]

[project.urls]
Source = "https://github.com/icecraft/SphinxDoc"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
include = [
    "sphinx_docs/",
    "flaskr",
    "requirements.txt",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "error",
]

[[tool.mypy.overrides]]
module = [
    "asgiref.*",
    "dotenv.*",
    "cryptography.*",
    "importlib_metadata",
]
ignore_missing_imports = true
